--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Project
 Visualization/*.csv
 !Visualization/merged_trend_data.csv
 !Visualization/merged_area_data.csv
+!Visualization/cls_report_gannub.csv
+!Visualization/classification_report_1.csv
